Enable config options needed for Ubuntu Touch
Signed-off-by: Jani Monoses <jani@ubuntu.com>

--- a/arch/arm/configs/cyanogenmod_p9090_defconfig
+++ b/arch/arm/configs/cyanogenmod_p9090_defconfig
@@ -777,7 +777,7 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_MROUTE is not set
-CONFIG_ANDROID_PARANOID_NETWORK=y
+CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_NET_ACTIVITY_STATS=y
 # CONFIG_NETWORK_SECMARK is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
@@ -3368,4 +3368,14 @@ CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
+
+CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
+CONFIG_USER_NS=y
+CONFIG_PID_NS=y
+CONFIG_NET_NS=y
+CONFIG_DEVTMPFS=y
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+CONFIG_FANOTIFY=y
+CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 # #endif
